--- a/gb/24/1/2/n14149759.md
+++ b/gb/24/1/2/n14149759.md
@@ -1,20 +1,20 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>中共用AI收集个资为美国人建档 专家：需防范</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/03/id13952088-164709-600x400.jpg" />
 <h6>中共已把早期窃取的美国人的个人数据，利用AI技术为美国人建立了档案，形成一个庞大的数据库。（黄小堂／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2024年01月02日讯】（大纪元记者宋唐、易如采访报导）伴随着<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BA%BA%E5%B7%A5%E6%99%BA%E8%83%BD.md#1">人工智能</a>的兴起，中共已把早期窃取的美国人个人数据，利用AI技术为美国人建立了档案，形成一个庞大的数据库，严重威胁到美国的国家安全。</p>
+	<p>【大纪元2024年01月02日讯】（大纪元记者宋唐、易如采访报导）伴随着人工智能的兴起，中共已把早期窃取的美国人个人数据，利用AI技术为美国人建立了档案，形成一个庞大的数据库，严重威胁到美国的国家安全。</p>
 <p>专家表示，过去几年中共的一些做法，未来的几年只会越演越烈，民主国家应当做好防范。</p>
 <h2><strong>中共黑客盗取美国人海量个人资料</strong></h2>
 <p>西方国家原以为数字革命能让世界更自由、更开放，但在中共眼里，数字革命则成为窃取个人隐私数据、监控维稳的好机会。</p>
-<p>根据大陆行业报告，在中国大陆的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BA%BA%E5%B7%A5%E6%99%BA%E8%83%BD.md#1">人工智能</a>行业中，规模最大当属监视、生物识别等的“安防”，2018年行业总占比达53%，包括被美国制裁的海康威视、大华科技、华为、商汤科技等，而第二位的金融只占15.8%。</p>
+<p>根据大陆行业报告，在中国大陆的人工智能行业中，规模最大当属监视、生物识别等的“安防”，2018年行业总占比达53%，包括被美国制裁的海康威视、大华科技、华为、商汤科技等，而第二位的金融只占15.8%。</p>
 <p>除了国内数字技术用于监控维稳外，中共在国外也肆无忌惮地窃取外国公司、组织、个人的海量资料。根据美国联邦调查局2022年的数据，中共从美国窃取的个人和公司数据，比其它所有国家黑客窃取的总和还要多。</p>
 <p>虽然美国情报机构也收集情报，但不会收集经济和工业情报来为其公司提供竞争优势。而中共已将国家安全与商业融为一体。通过2014年以来通过的一系列国家安全方面的立法，所有中国公民和公司都必须应要求合作收集情报。</p>
 <p>实际上这已形成了一种全社会的间谍活动，中共也利用社交媒体平台进行数据收集，它还可能让中共有机会塑造和压制网络叙事。</p>
-<figure id="attachment_14138608" aria-describedby="caption-attachment-14138608" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/12/id14138608-heike.jpg"><img class="size-large wp-image-14138608" src="https://i.epochtimes.com/assets/uploads/2023/12/id14138608-heike-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14138608" class="wp-caption-text">中共军方黑客，多次攻击美国的关键服务设施。网攻示意图。(Philippe Huguen/Getty Images)</figcaption></figure>
+<figure id="attachment_14138608" aria-describedby="caption-attachment-14138608" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/12/id14138608-heike.jpg"><img decoding="async" class="size-large wp-image-14138608" src="https://i.epochtimes.com/assets/uploads/2023/12/id14138608-heike-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14138608" class="wp-caption-text">中共军方黑客，多次攻击美国的关键服务设施。网攻示意图。(Philippe Huguen/Getty Images)</figcaption></figure>
 <p>大概从2013年11月开始，中共黑客入侵了美国人事管理局（OPM）的数据库，窃取的数据涉及数百万美国人，包括2,200万份安全审查文件和500万个指纹。这些数据库包含了美国安全许可持有者最敏感的信息，甚至包括个人财务、药物滥用、婚外情、精神病治疗等，所有这些数据现在都在北京。</p>
 <p>前联邦调查局局长詹姆斯?科米（James Comey）曾表示，他本人的安全审查表很可能已被窃取，包括他自八岁以来居住过的每个地方的地址，以及他在美国境外旅行过的所有地方的清单。</p>
 <p>继OPM外泄事件之后，中共黑客又于2017年实施了史上最大的数据泄露事件之一：从消费者信用报告机构Equifax窃取了约1.5亿美国人的机密数据。</p>
@@ -26,7 +26,7 @@
 <p>微软公司总裁Brad Smith在接受《华尔街日报》采访时表示，微软相信中国已经在利用AI能力来梳理这些海量数据集。“在过去两年里，我们看到的证据表明，这种情况实际上已经发生了。”</p>
 <p>台湾人工智慧实验室（Taiwan AI Labs）创办人杜奕瑾对大纪元表示，中国（中共）入侵微软的Exchange Server，它首先在网络上大量盗取Email账号或社交媒体账号，从中找到各机构重要的人士；因为有了Email账号跟密码相关的资讯，第二步就从LinkedIn里大量读取他LinkedIn的Profile，从中就可以知道哪些人在哪些组织，可能是负责比较重要的，比如说可能会有协同层级的权限，再藉由这些，再去入侵他的Exchange Server。</p>
 <p>“Exchange Server在微软修补了四个漏洞之前，它是有办法被入侵，取得相关的管理员权限。”</p>
-<figure id="attachment_12585260" aria-describedby="caption-attachment-12585260" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/11/471954.jpg"><img class="size-large wp-image-12585260" src="https://i.epochtimes.com/assets/uploads/2020/11/471954-600x419.jpg" alt="" width="600" b="419" /></a><figcaption id="caption-attachment-12585260" class="wp-caption-text">台湾人工智慧实验室创办人杜奕瑾。（方金媛／大纪元）</figcaption></figure>
+<figure id="attachment_12585260" aria-describedby="caption-attachment-12585260" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/11/471954.jpg"><img decoding="async" class="size-large wp-image-12585260" src="https://i.epochtimes.com/assets/uploads/2020/11/471954-600x419.jpg" alt="" width="600" b="419" /></a><figcaption id="caption-attachment-12585260" class="wp-caption-text">台湾人工智慧实验室创办人杜奕瑾。（方金媛／大纪元）</figcaption></figure>
 <p>杜奕瑾表示，过去这几年资安事件非常多，像美国万豪酒店或像Equifax相关的大量的数据，都有非常多的个人Profile，情报组织很自然加以利用，来建立对国外重要人士的情搜，甚至对一些组织进行攻击。</p>
 <p>“当你要做这种大量数据的整理跟搜集，很自然AI相关方法就会被用上。”他说。</p>
 <p>《华尔街日报》报导说，美国政府认为，中共情报人员正在将他们多年来从美国人事管理办公室、健康保险公司和银行窃取的数据库中的敏感信息（包括指纹、外国联系人、金融债务和个人医疗记录）关联起来，以定位和追踪美国卧底间谍，并精准锁定获得安全许可的官员。反间谍分析师表示，例如，在万豪黑客事件中窃取的护照信息可以帮助间谍监控政府官员的旅行行程。</p>
@@ -34,7 +34,7 @@
 <p>Gerstell说，“有了这些档案，再加上为中国（中共）政府工作的几十万黑客，我们就有了一场可怕的潜在国家安全威胁。”</p>
 <p>杜奕瑾表示，如果以技术能力而言，全世界只要是顶尖的情报机构，都有办法做得到。只是民主国家比较难做这种事情，因为西方社会比较透明，对民众去搜集资料是违法的，如果是欧盟的话，可能就违反了《一般数据保护条例》（GDPR），美国也有《人工智能权利法案蓝图》（Blueprint for an AI Bill of Right），规范人工智能。</p>
 <p>“但如果一些国家对这方面资料的管理，本来就是中央集权的，那它很自然地利用大量资料搜集，再运用现在的人工智能科技，去进一步做资料的盗取，或说对人行为的监控，都是有可能的。”他说。</p>
-<figure id="attachment_14030314" aria-describedby="caption-attachment-14030314" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14030314-Artificial-Intelligence-1200x800.jpg"><img class="size-large wp-image-14030314" src="https://i.epochtimes.com/assets/uploads/2023/07/id14030314-Artificial-Intelligence-1200x800-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14030314" class="wp-caption-text">写有AI字样的合成图片。(Olivier Morin/AFP via Getty Images)</figcaption></figure>
+<figure id="attachment_14030314" aria-describedby="caption-attachment-14030314" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14030314-Artificial-Intelligence-1200x800.jpg"><img decoding="async" class="size-large wp-image-14030314" src="https://i.epochtimes.com/assets/uploads/2023/07/id14030314-Artificial-Intelligence-1200x800-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14030314" class="wp-caption-text">写有AI字样的合成图片。(Olivier Morin/AFP via Getty Images)</figcaption></figure>
 <h2><strong>未来如何应对？</strong></h2>
 <p>杜奕瑾表示，这种利用大量资料的收集，怎么去影响一个人的想法，以及怎么去利用过去的资料，再去取得更多的情报资讯，过去几年看起来是有效的，未来的几年只会越演越烈。</p>
 <p>“目前的这种资讯科技，再加上人工智能，它会非常强大，现在大家就已经在担心。过去大家以为社交媒体是一个公众论坛，以为人工智能是来帮助人去做事情。但如果没有一个很好的拿捏，放任社交媒体或人工智能以盈利为导向的话，很容易会往武器的方向去发展。”</p>
@@ -45,39 +45,34 @@
 <p>责任编辑：林妍#</p>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/11/n14134360.md#1">报告：中共加强对维权人士家属的株连迫害</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/5/n14130100.md#1">中国个人债务危机潮到来 “老赖”人数激增</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：乐高乐园的中国元素 文化的旅程</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141316.md#1">这些亚马逊好物 让你生活品质大提升</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">UGG 男士雨衣61%折扣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135076.md#1">羊毛衫不缩水不掉色 这种洗衣液是关键</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/28/n14145812.md#1">美中两大阵营的AI和量子技术竞争激烈</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/31/n14147955.md#1">商汤科技推AI捉棋机械臂 被指突显商业窘境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/31/n14147958.md#1">中共对台介选升级 生成式AI成造假利器</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/1/n14148503.md#1">AI介入法律领域 美首席大法官发出警告</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/8/6/n11434332.md#1" target="_blank">俞元：与中共“求同存异” 无疑引狼入室</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/16/6/24/n8031801.md#1" target="_blank">五年偏瘫一念即愈</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/7/13/n10561691.md#1" target="_blank">林辉：苏联20万“笑话犯”被关背后的荒谬</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/6/n11571997.md#1" target="_blank">他们为我们的生活带来光明（1）</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/8/n14132234.md#1">人身有多难得？聊斋中的轮回故事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/20/n14119976.md#1">雨霖铃?李克强之死</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/18/n14138664.md#1">冬至知多少？冬至文化典故与民俗集锦</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/17/n14137969.md#1">美国防承包商称 蛋形UFO曾保存在51区</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/30/n14127129.md#1">奉天命助圣王治世 百日为相白马化龙（下）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/22/n14141715.md#1">【全球新闻】前央视喉舌王志安被起底 中共大外宣被看穿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/22/n14141713.md#1">【晚间新闻】盘点2024年美中关系对抗焦点</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14140545.md#1">【百年真相】一把火烧80吨 中共三次焚书运动</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14140113.md#1">中共国安插足经济引内讧 与胡锡进互怼</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14140579.md#1">中共告诉拜登将统一台湾 白宫回应</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14140541.md#1">国务院智囊公开承认：历史留给中共时间已不多</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/19/n14139785.md#1">杨幂着15公斤礼服 累到在电梯里两度面壁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14139880.md#1">两次被主持人说错一电影名 梁朝伟一脸尴尬</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14140599.md#1">为妻治病花光积蓄且欠债 港导演彭发申请破产</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141362.md#1">黎姿曾因弟出车祸退圈 如今黎婴站立拍全家福</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141408.md#1">央视书画节目总导演楼建军猝死 终年56岁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：法国传奇 爱马仕香水年终5折酬宾</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">旅行必备：旅行电源板3个USB 2个插座  41%折扣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/6/n14130699.md#1">蜂蜜止咳胜抗生素 五代中医传人: 这样吃很有效</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14140144.md#1">睡前想什么会影响睡眠？ 专家这么说</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/19/n14139698.md#1">预防第2大夺命癌症 早做一件事生存率超9成</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284473.md#1">老僧预言他将大祸临头 权倾天下的他将如何选择？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286164.md#1">【未解之谜】最可信的穿越者 他在历史中留下了证据</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285355.md#1">奇怪的数学家（In our Prime）观影有感</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284224.md#1">《韩信》，我竟然看上了瘾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285490.md#1">故宫耐震神技夸世 建筑秘诀藏在何处？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289641.md#1">【晚间新闻】拜登警告中共 助俄将付出代价</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289092.md#1">【新闻大家谈】王维洛：洞庭湖决堤的前因后果</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289733.md#1">【菁英论坛】全民躺平反共 熬出新中国？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288249.md#1">市场疲软 传李嘉诚旗下东莞楼盘五折出售</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288521.md#1">大陆失业者比比皆是 80后博主大街上痛哭</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287995.md#1">成龙《传说》成本3.6亿 9小时票房仅61万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287290.md#1">TWICE子瑜今夏想挑战潜水 目标深度引来笑声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14288095.md#1">被问《长相思2》片酬谁最高 杨紫回答超搞笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288874.md#1">胡歌首谈夫妻相处模式 大赞老婆付出很多</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/9/n14287053.md#1">《比佛利山超级警探4》登台美及全球Netflix榜首</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288317.md#1">吃水蜜桃如何快速去果核？ 试试这个妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287637.md#1">专家：随着年龄老化 你应该多吃这种食物</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274458.md#1">锻炼“天然护膝”让行动自如</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288470.md#1">哈佛研究：感恩让年长者活得更久</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280514.md#1">心律失常 手脚麻木 记得检查钾含量！</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/1/2/n14149759.htm">中共用AI收集个资为美国人建档 专家：需防范</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/24/1/2/n14149759.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/24/1/2/n14149759.htm">中共用AI收集个资为美国人建档 专家：需防范</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/1/2/n14149759.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
